fixed overlay layout bug

--- a/webgui/app/components/layout/overlay.css
+++ b/webgui/app/components/layout/overlay.css
@@ -2,9 +2,11 @@
   z-index: 20;
   position: absolute;
   top: 0;
-  left: 0;
+  left: -1rem;
   height: 100vh;
   width: 100vw;
+  margin: 0;
+  padding: 0;
   background-color: #666666;
   opacity: 0.5;
 }
